--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/E-BANK?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-server.port=8083
+#spring.datasource.url=jdbc:mysql://localhost:3306/E-BANK?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#server.port=8083
 #spring.jpa.open-in-view=true
 #logging.level.org.springframework=INFO
 #logging.level.com=INFO
+spring.datasource.url=jdbc:h2:mem:ebank-db
+spring.h2.console.enabled=true
+server.port=8082
