--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ server.port=8083
 spring.jpa.open-in-view=true
 logging.level.org.springframework=INFO
 logging.level.com=INFO
+
+#springdoc.swagger-ui.path=/swagger-ui.html
 #spring.datasource.url=jdbc:h2:mem:ebank-db
 #spring.h2.console.enabled=true
 #server.port=8082
